function(includeLibraries NAME SOURCES LIBS DEPS)
    file(GLOB ${NAME}_LIST CONFIGURE_DEPENDS "${${MY_PROJECT_NAME}_SOURCE_DIR}/${SOURCES}")
    MESSAGE(STATUS "============================================")
    MESSAGE(STATUS ${NAME}_library)
    MESSAGE(STATUS ${SOURCES})
    MESSAGE(STATUS ${LIBS})
    MESSAGE(STATUS "${DEPS}")
    MESSAGE(STATUS "${${NAME}_LIST}")
    add_library(${NAME} STATIC "${LIBS}" "${${NAME}_LIST}")
    target_include_directories(${NAME} PUBLIC ../include)
    target_link_libraries(${NAME} PRIVATE ${DEPS})
    target_compile_features(${NAME} PUBLIC cxx_std_17)
    set_target_properties(${NAME} PROPERTIES LINKER_LANGUAGE CXX)
    MESSAGE(STATUS "============================================")
    MESSAGE(STATUS "")
endfunction()

includeLibraries(thrdpool "include/*" "lib.cpp" "")